# penguin_nav

./: CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml  nav2_params_navfn_rpp.yaml  rviz.rviz
data/: process.py
data/circle_test/: gen.py  test_0001.csv  test_0002.csv
data/kagayaki/: kagayaki_0001.csv  kagayaki_0002.csv  kagayaki_0003.csv  kagayaki_0004.csv
data/tsukuba2/: 0001.csv  area01-sparse.csv  area02-dense.csv  area02-sparse.csv  area03-sparse-offset.csv  area03-sparse.csv  area04-dense.csv  area04-sparse.csv  area05-dense.csv  area05-sparse.csv  area06-sparse.csv  area07-dense.csv  sparse-base.csv  tsukuba_localozation.csv
data/tsukuba_localozation_sparse_part_mod/: 0002.csv  0003.csv  0004.csv  0005.csv  0006.csv  0007.csv  0008.csv  0009.csv  0010.csv  README.md  test.csv
launch/: nav.launch.xml
penguin_nav/: CMakeLists.txt  README.md  follow_path.py  package.xml
penguin_nav/config/: nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  plotjuggler.xml
penguin_nav/include/: util.hpp  waypoint_obstacle_avoidance.hpp
penguin_nav/launch/: nav.launch.xml  navigation_launch.py
penguin_nav/penguin_nav/: follow_path.py  input.py  visualizer.py  waypoint.py
penguin_nav/src/: main.cpp  util.cpp  waypoint_obstacle_avoidance.cpp
penguin_nav_msgs/: CMakeLists.txt  package.xml
penguin_nav_msgs/srv/: AdjustWaypoints.srv  NeedAdjust.srv
src/: pose_to_tf.cpp
